Fixed navbar on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -118,11 +118,11 @@ section {
 
 
 
-@media screen and (max-width: 39.9375em) {
-  .no-js .top-bar {
-    display: none;
-  }
-}
+// @media screen and (max-width: 39.9375em) {
+//   .no-js .top-bar {
+//     display: none;
+//   }
+// }
 
 @media print, screen and (min-width: 40em) {
   .no-js .title-bar {
@@ -5334,8 +5334,8 @@ a.thumbnail {
     width: auto; }
   .top-bar .top-bar-left,
   .top-bar .top-bar-right {
-    -ms-flex: 0 0 100%;
-        flex: 0 0 100%;
+    // -ms-flex: 0 0 100%;
+    //     flex: 0 0 100%;
     max-width: 100%; }
   @media print, screen and (min-width: 40em) {
     .top-bar {
